Fix some styling & spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
 	padding: 12px;
 	min-height: 150%;
-	padding-bottom: 500px;
+	padding-bottom: 80px;
 }
 
 /* from https://github.com/Semantic-Org/Semantic-UI-CSS/issues/40 */
