--- a/src/styles/Viz.css
+++ b/src/styles/Viz.css
@@ -1,7 +1,7 @@
 .Viz {
     font-family: 'Barlow Semi Condensed';
     font-size: 0.9em;
-	/* min-height: 400px; */
+	min-height: 500px;
 }
 
 .Viz h3 {
